# ctu-relational-py

./: LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
ctu_relational/: __init__.py  db_dataset.py
ctu_relational/datasets/: __init__.py  ctu_dataset.py  ctu_datasets.py  db_dataset.py  tpcd.py
ctu_relational/db/: __init__.py  db_inspector.py  schema.py
ctu_relational/helpers/: progress.py
ctu_relational/tasks/: __init__.py  ctu_task.py
